<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="382dp"
        android:layout_height="706dp"
        android:layout_margin="2dp">

        <ImageView
            android:id="@+id/imgProf"
            android:layout_width="192dp"
            android:layout_height="162dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/icon"
            app:layout_constraintBottom_toTopOf="@+id/loginprof"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic__profile" />

        <TextView
            android:id="@+id/loginprof"
            android:layout_width="192dp"
            android:layout_height="49dp"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="20sp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.321" />

        <Button
            android:id="@+id/PersonalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/PersonalInfo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:typeface="serif"
            app:icon="@drawable/ic__account_profile"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginprof"
            app:layout_constraintVertical_bias="0.006" />

        <Button
            android:id="@+id/fav"
            android:layout_width="309dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/favourite"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:typeface="serif"
            app:icon="@drawable/ic__favorite24"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification"
            app:layout_constraintVertical_bias="0.093" />

        <Button
            android:id="@+id/notification"
            android:layout_width="309dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/notification"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:typeface="serif"
            app:icon="@drawable/ic__notification"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PersonalInfo"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="319dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="398dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="482dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="566dp" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="131dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="12sp"
            android:typeface="serif"
            app:icon="@drawable/ic__back_left_icon"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fav"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>